<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_white_top"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/dp_0_5"
        android:textSize="@dimen/sp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:textColor="@color/black60"
        android:gravity="center"
        android:text="@string/string_selector"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/dp_0_5"
        android:layout_margin="@dimen/dp_10"
        android:textColor="@color/black60"
        android:textSize="@dimen/sp_20"
        android:gravity="center"
        android:text="@string/string_keyboard_max_length"/>

    <com.hjq.shape.view.ShapeTextView
        android:id="@+id/selectorCameraTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/sp_18"
        app:shape_solidPressedColor="@color/click_color"
        android:textColor="@color/black"
        android:padding="@dimen/dp_10"
        android:layout_margin="@dimen/dp_5"
        android:text="@string/string_note_detail"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="#F4F4F4"/>

    <com.hjq.shape.view.ShapeTextView
        android:id="@+id/selectorAlbumTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/sp_18"
        app:shape_solidPressedColor="@color/click_color"
        android:textColor="@color/black"
        android:padding="@dimen/dp_10"
        android:layout_margin="@dimen/dp_5"
        android:text="@string/string_set_note_to_device"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="#F4F4F4"/>

    <com.hjq.shape.view.ShapeTextView
        android:id="@+id/selectorCancelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/black"
        app:shape_solidPressedColor="@color/click_color"
        android:padding="@dimen/dp_10"
        android:layout_margin="@dimen/dp_5"
        android:text="@string/string_cancel"/>
</LinearLayout>