<?xml version="1.0" encoding="utf-8"?>
<com.hjq.shape.layout.ShapeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:shape_radius="@dimen/dp_10"
    android:layout_margin="@dimen/dp_10"
    android:orientation="vertical"
    android:padding="5dp"
    app:shape_solidColor="@color/white"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/dp_8"
        android:textColor="@color/black70"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/comm_prompt"/>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/dp_8"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_margin="@dimen/dp_10"
        android:textColor="@color/black70"
        android:lineSpacingExtra="5dp"
        android:text="@string/string_notify_desc"/>


<!--    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@color/click_color"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.hjq.shape.view.ShapeTextView
            android:id="@+id/dialogNoticeCancelTv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="@dimen/dp_8"
            android:layout_height="wrap_content"
            android:text="@string/common_cancel"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_8"
            app:shape_solidColor="@color/white"
            app:shape_solidPressedColor="@color/click_color"
            app:shape_strokeWidth="@dimen/dp_1"
            app:shape_strokeColor="@color/click_color"
            android:gravity="center"
            android:textColor="@color/black90"
            app:shape_radius="@dimen/dp_10"
            android:textSize="@dimen/sp_20"/>




        <com.hjq.shape.view.ShapeTextView
            android:id="@+id/dialogNoticeConfirmTv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="@dimen/dp_8"
            android:layout_height="wrap_content"
            android:text="@string/common_confirm"
            android:layout_gravity="center"
            app:shape_radius="@dimen/dp_10"
            android:textColor="@color/blue"
            app:shape_solidColor="@color/white"
            android:layout_margin="@dimen/dp_8"
            app:shape_strokeWidth="@dimen/dp_1"
            app:shape_strokeColor="@color/click_color"
            app:shape_solidPressedColor="@color/click_color"
            android:gravity="center"
            android:textSize="@dimen/sp_20"/>

    </LinearLayout>

</com.hjq.shape.layout.ShapeLinearLayout>