<?xml version="1.0" encoding="utf-8"?>
<com.hjq.shape.layout.ShapeLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_margin="@dimen/dp_10"
    app:shape_radius="@dimen/dp_15"
    app:shape_solidColor="@color/white"
    android:gravity="center"
    android:layout_height="wrap_content">



    <TextView
        android:id="@+id/privacyTitleTv"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:padding="5dp"
        android:textSize="23sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="用户协议和隐私政策"/>


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">



       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="17sp"
           android:padding="8dp"
           android:textColor="@color/black"
           android:layout_margin="10dp"
           android:lineSpacingExtra="5dp"
           android:text="@string/privacy_agreement_2"/>

       <TextView
           android:id="@+id/privacyAndAgreementTv"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:gravity="center"
           android:textColor="@color/black"
           android:textSize="16sp"
           android:text="用户协议和隐私政策"/>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:gravity="center"
           android:visibility="gone"
           android:orientation="vertical">


           <TextView
               android:id="@+id/userAgreementTv"
               android:layout_width="wrap_content"
               android:textSize="18sp"
               android:padding="5dp"
               android:textColor="@color/blue"
               android:layout_height="wrap_content"
               android:text="@string/user_agreement_tips"/>

           <TextView
               android:id="@+id/privacyTv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="18sp"
               android:padding="5dp"
               android:textColor="@color/blue"
               android:text="@string/privacy_agreement_tips"/>


       </LinearLayout>


   </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:orientation="horizontal">



        <com.hjq.shape.view.ShapeTextView
            app:shape_solidColor="@color/white"
            app:shape_radius="@dimen/dp_8"
            android:id="@+id/privacyCancelBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="@dimen/dp_10"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black90"
            app:shape_solidPressedColor="@color/click_color"
            android:textStyle="bold"
            android:textSize="@dimen/sp_18"
            app:shape_strokeWidth="@dimen/dp_1"
            app:shape_strokeColor="@color/click_color"
            android:layout_margin="3dp"
            android:layout_height="wrap_content"
            android:text="@string/string_cancel"/>


      <!--  <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_5"
            android:background="#DBDBDB"/>
-->

        <com.hjq.shape.view.ShapeTextView
            app:shape_radius="@dimen/dp_8"
            app:shape_solidColor="@color/white"
            android:id="@+id/privacyConfirmBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="@dimen/sp_18"
            app:shape_solidPressedColor="@color/click_color"
            android:padding="@dimen/dp_10"
            app:shape_strokeWidth="@dimen/dp_1"
            app:shape_strokeColor="@color/click_color"
            android:layout_margin="@dimen/dp_3"
            android:layout_height="wrap_content"
            android:textColor="#15A4FF"
            android:textStyle="bold"
            android:text="@string/string_confirm"/>


    </LinearLayout>


</com.hjq.shape.layout.ShapeLinearLayout>